--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <body>
     <div>
       <h1>My Web App</h1>
+      <button id="web-app-button">Click me</button>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
