--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div>
       <h1>My Web App</h1>
-      <button id="web-app-button">Click me</button>
+      <button id="web-app-button">Click me!</button>
     </div>
     <script src="script.js"></script>
   </body>
